# chorecontrol

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  BUSINESS_LOGIC_SPEC.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_TASKS.md  Makefile  NEXT_STEPS.md  PROJECT_PLAN.md  README.md  STREAM_PROMPTS.md  Shaun.md  TASKS.md  UPDATING.md  hacs.json  manage.py  pyproject.toml  repository.yaml  requirements-test.txt  test_models.py
.claude/skills/: commit.md  migrate.md  review.md  test.md
.github/workflows/: build.yml
addon/: Dockerfile  README.md  README_SEED.md  __init__.py  app.py  auth.py  config.json  config.py  models.py  requirements.txt  run.sh  scheduler.py  schemas.py  seed.py  seed_helpers.py
addon/jobs/: __init__.py  auto_approval.py  instance_generator.py  missed_instances.py  points_audit.py  reward_expiration.py
addon/migrations/: env.py
addon/routes/: __init__.py  auth_routes.py  chores.py  instances.py  points.py  rewards.py  ui.py  users.py
addon/static/css/: style.css
addon/static/js/: app.js
addon/templates/: available.html  base.html  calendar.html  dashboard.html
addon/templates/approvals/: queue.html
addon/templates/auth/: login.html
addon/templates/chores/: detail.html  form.html  list.html
addon/templates/rewards/: form.html  list.html
addon/templates/users/: detail.html  list.html
addon/tests/: __init__.py  test_background_jobs.py  test_chores.py  test_instances.py  test_points.py  test_rewards.py  test_seed.py  test_ui.py  test_users.py
addon/utils/: __init__.py  instance_generator.py  recurrence.py  webhooks.py
chorecontrol/: CHANGELOG.md  Dockerfile  README.md  README_SEED.md  app.py  auth.py  build.yaml  config.py  config.yaml  models.py  run.sh  scheduler.py  schemas.py  seed_db.py
chorecontrol/jobs/: __init__.py  auto_approval.py  instance_generator.py  missed_instances.py  points_audit.py
chorecontrol/migrations/versions/: 0a20ee519594_add_early_claim_days_grace_period_days_.py  20250103_add_work_together.py  20250106_add_extra_field.py  20251129_add_unmapped_role.py  20251205_add_claim_only_role.py  3c496b1f8493_add_settings_table_for_api_token_storage.py  86674e061ea9_initial_schema.py
chorecontrol/routes/: chores.py  debug.py  instances.py  points.py  rewards.py  ui.py  user_mapping.py  users.py
chorecontrol/services/: __init__.py  instance_service.py  reward_service.py
chorecontrol/static/css/: glass-overrides.css  raspberry-pi-fixes.css  style.css
chorecontrol/static/js/: app.js  dark-mode.js
chorecontrol/templates/: access_restricted.html  available.html  base.html  calendar.html  dashboard.html  diagnostic.html  extra.html  history.html  settings.html  today.html
chorecontrol/templates/_components/: macros.html
chorecontrol/templates/approvals/: queue.html
chorecontrol/templates/auth/: login.html
chorecontrol/templates/chores/: detail.html  form.html  list.html
chorecontrol/templates/rewards/: form.html  list.html  my_rewards.html
chorecontrol/templates/users/: detail.html  list.html  mapping.html
chorecontrol/tests/: conftest.py  test_access_control.py  test_background_jobs.py  test_chores.py  test_ingress.py  test_instances.py  test_points.py  test_recurrence.py  test_rewards.py  test_seed.py  test_ui.py  test_user_mapping.py  test_users.py  test_webhooks.py  test_work_together.py
chorecontrol/utils/: ha_api.py  instance_generator.py  recurrence.py  timezone.py
custom_components/chorecontrol/: __init__.py  api_client.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  strings.json
docs/: USER_MANAGEMENT.md  api-reference.md  architecture.md  dashboard-setup.md  development.md  entity-reference.md  installation.md  integration-setup.md  notifications.md  technical.md  user-guide.md
docs/examples/: dynamic-dashboard.yaml  kid-dashboard.yaml  mushroom-dashboard.yaml  parent-dashboard.yaml
examples/: notification-automations.yaml
migrations/versions/: fe05e7ce7c54_initial_migration_with_all_7_models.py
scripts/: build-local.sh
tests/: __init__.py  conftest.py  test_api.py  test_api_client.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_init.py  test_models.py  test_sensor.py  test_services.py  test_webhook.py
tests/fixtures/: __init__.py  fixture_loader.py  sample_data.json
tests/integration/: test_e2e.py
