[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chorecontrol"
version = "0.1.0"
description = "Home Assistant chore management system for kids and parents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["home-assistant", "chores", "kids", "parenting", "rewards"]
authors = [
  {name = "ChoreControl Contributors"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "Flask>=2.3.0",
  "Flask-SQLAlchemy>=3.0.0",
  "Flask-Migrate>=4.0.0",
  "APScheduler>=3.10.0",
  "ics>=0.7",
  "jsonschema>=4.17.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-flask>=1.3.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "pre-commit>=3.5.0",
  "types-requests",
  "types-Flask",
  "bandit[toml]>=1.7.5",
]

test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-flask>=1.3.0",
  "pytest-mock>=3.12.0",
]

[project.urls]
Homepage = "https://github.com/shaunadam/chorecontrol"
Documentation = "https://github.com/shaunadam/chorecontrol/blob/main/docs/"
Repository = "https://github.com/shaunadam/chorecontrol.git"
Issues = "https://github.com/shaunadam/chorecontrol/issues"

# ========================================
# Tool Configurations
# ========================================

# Ruff - Fast Python linter and formatter
[tool.ruff]
# Line length to match Black
line-length = 100
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",  # Don't lint auto-generated migrations
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # flake8-eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "B008",    # Do not perform function calls in argument defaults (common in Flask)
]

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"tests/**/*.py" = [
    "ARG",     # Unused arguments (common in fixtures)
    "PLR2004", # Magic values in tests are fine
]
# Ignore type-checking block rules in HA custom components (HA integration style)
"custom_components/**/*.py" = [
    "TC001",   # Application imports in type-checking block
    "TC002",   # Third-party imports in type-checking block
]

[tool.ruff.lint.isort]
known-first-party = ["chorecontrol"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Auto-detect line endings
line-ending = "auto"

# Black - Code formatting (keeping for compatibility)
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | __pycache__
  | build
  | dist
  | migrations
)/
'''

# mypy - Static type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
no_implicit_optional = true

# Ignore missing imports for third-party libraries without stubs
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = false
disallow_untyped_defs = false

# pytest - Testing configuration
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                      # Show summary of all test outcomes
    "--strict-markers",         # Error on unknown marks
    "--strict-config",          # Error on unknown config options
    "-v",                       # Verbose output
]
# Coverage options (use with: pytest --cov=addon)
# These are commented out by default to allow running tests before addon is created
# Uncomment once addon directory exists:
# addopts += [
#     "--cov=addon",              # Coverage for addon directory
#     "--cov-report=term-missing", # Show missing lines in coverage
#     "--cov-report=html",        # Generate HTML coverage report
#     "--cov-report=xml",         # Generate XML coverage report (for CI)
#     "--cov-branch",             # Measure branch coverage
#     "--cov-fail-under=70",      # Fail if coverage is below 70%
# ]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, test interactions)",
    "e2e: End-to-end tests (slowest, full system tests)",
    "slow: Slow running tests",
]
filterwarnings = [
    "error",                    # Turn warnings into errors
    "ignore::DeprecationWarning", # Ignore deprecation warnings from dependencies
]

# Coverage settings
[tool.coverage.run]
source = ["addon"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit - Security linting
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
]
skips = [
    "B101",  # Allow assert statements (common in tests)
]
